// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation updateUserSettings should create user settings when does not exist 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": true,
    "campaignCtaPlacement": "header",
    "companionExpanded": null,
    "customLinks": null,
    "enableCardAnimations": true,
    "flags": Object {
      "sidebarCustomFeedsExpanded": null,
      "sidebarOtherExpanded": null,
      "sidebarResourcesExpanded": null,
      "sidebarSquadExpanded": null,
    },
    "insaneMode": true,
    "onboardingChecklistView": "hidden",
    "openNewTab": true,
    "optOutCompanion": false,
    "optOutReadingStreak": false,
    "optOutWeeklyGoal": false,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "sidebarExpanded": false,
    "sortingEnabled": false,
    "spaciness": "eco",
    "theme": "bright",
    "userId": "1",
  },
}
`;

exports[`mutation updateUserSettings should update opt out companion settings 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": true,
    "campaignCtaPlacement": "header",
    "companionExpanded": null,
    "customLinks": null,
    "enableCardAnimations": true,
    "flags": Object {
      "sidebarCustomFeedsExpanded": null,
      "sidebarOtherExpanded": null,
      "sidebarResourcesExpanded": null,
      "sidebarSquadExpanded": null,
    },
    "insaneMode": false,
    "onboardingChecklistView": "hidden",
    "openNewTab": true,
    "optOutCompanion": true,
    "optOutReadingStreak": false,
    "optOutWeeklyGoal": false,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "sidebarExpanded": false,
    "sortingEnabled": false,
    "spaciness": "eco",
    "theme": "darcula",
    "userId": "1",
  },
}
`;

exports[`mutation updateUserSettings should update user links if valid 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": true,
    "campaignCtaPlacement": "header",
    "companionExpanded": null,
    "customLinks": Array [
      "http://abc.com",
    ],
    "enableCardAnimations": true,
    "flags": Object {
      "sidebarCustomFeedsExpanded": null,
      "sidebarOtherExpanded": null,
      "sidebarResourcesExpanded": null,
      "sidebarSquadExpanded": null,
    },
    "insaneMode": false,
    "onboardingChecklistView": "hidden",
    "openNewTab": true,
    "optOutCompanion": false,
    "optOutReadingStreak": false,
    "optOutWeeklyGoal": false,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "sidebarExpanded": false,
    "sortingEnabled": false,
    "spaciness": "eco",
    "theme": "darcula",
    "userId": "1",
  },
}
`;

exports[`mutation updateUserSettings should update user settings 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": true,
    "campaignCtaPlacement": "header",
    "companionExpanded": null,
    "customLinks": Array [
      "http://abc.com",
    ],
    "enableCardAnimations": true,
    "flags": Object {
      "sidebarCustomFeedsExpanded": null,
      "sidebarOtherExpanded": null,
      "sidebarResourcesExpanded": null,
      "sidebarSquadExpanded": null,
    },
    "insaneMode": false,
    "onboardingChecklistView": "hidden",
    "openNewTab": true,
    "optOutCompanion": false,
    "optOutReadingStreak": false,
    "optOutWeeklyGoal": false,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "sidebarExpanded": false,
    "sortingEnabled": false,
    "spaciness": "eco",
    "theme": "bright",
    "userId": "1",
  },
}
`;

exports[`query userSettings should create default settings if not exist 1`] = `
Object {
  "appInsaneMode": true,
  "autoDismissNotifications": true,
  "campaignCtaPlacement": "header",
  "companionExpanded": false,
  "customLinks": null,
  "enableCardAnimations": true,
  "flags": Object {
    "sidebarCustomFeedsExpanded": true,
    "sidebarOtherExpanded": true,
    "sidebarResourcesExpanded": true,
    "sidebarSquadExpanded": true,
  },
  "insaneMode": false,
  "onboardingChecklistView": "hidden",
  "openNewTab": true,
  "optOutCompanion": false,
  "optOutReadingStreak": false,
  "optOutWeeklyGoal": false,
  "showOnlyUnreadPosts": false,
  "showTopSites": true,
  "sidebarExpanded": false,
  "sortingEnabled": false,
  "spaciness": "eco",
  "theme": "darcula",
  "userId": "1",
}
`;
